--- a/.github/workflows/test-send-mail.yml
+++ b/.github/workflows/test-send-mail.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use Send Mail Action
-        uses: coumarane/send-mail-action@v1
+        uses: coumarane/send-mail-action@v1.1.0
         with:
           api_key: ${{ secrets.MAILJET_API_KEY }}
           api_secret: ${{ secrets.MAILJET_API_SECRET }}
-          from_email: 'c.coumarane@gmail.com'
-          to_email: 'c.coumarane@gmail.com'
-          subject: 'Hello from GitHub Actions'
-          message: 'This is a test email sent via Mailjet!'
+          from_email: "c.coumarane@gmail.com"
+          to_email: "c.coumarane@gmail.com"
+          subject: "Hello from GitHub Actions"
+          message: "This is a test email sent via Mailjet!"
