--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ inputs:
     required: true
 runs:
   using: 'node16'
-  main: 'index.js'
+  main: 'dist/index.js'
 branding:
   color: 'blue'
   icon: 'mail'
